tests/fixtures/invalid/pow_list_str_list.py
# Cannot call pow() with List[int], Str, List[int]
x = pow([1, 2, 3], "hello", [1, 2, 3])
